--- a/pandas/Exercise 3 Pandas.ipynb
+++ b/pandas/Exercise 3 Pandas.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Import pandas package"
+    "1) Import Pandas package."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Load Produdcts.csv to a dataframe"
+    "2) Read the content of Products.csv into a Pandas DataFrame."
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Display first 5 rows"
+    "3) Display the first 5 rows of the DataFrame."
    ]
   },
   {
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4) Display last 5 rows"
+    "4) Display the last 5 rows of the DataFrame."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5) Retrieve maximun unit price of the table"
+    "5) Retrieve maximun unit price in the DataFrame."
    ]
   },
   {
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6) Count the number of rows in the dataframe"
+    "6) Count the number of rows in the DataFrame."
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7) Display average unit price (hint: method:- mean())"
+    "7) Display the average unit price (hint: method:- mean())."
    ]
   },
   {
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8) Display the types of the columns"
+    "8) Display the types of the columns."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9) Display all columns for the 5th row (row 4)"
+    "9) Display all columns for the 5th row (row 4)."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "10) Display columns 3 to 5 for the row 9"
+    "10) Display columns 3 to 5 for the row 9."
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "11) Display row 3 to 5, columns from ProductName to UnitPrice"
+    "11) Display row 3 to 5, columns from ProductName to UnitPrice."
    ]
   },
   {
@@ -165,8 +165,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "12) Display number of items (rows) for each category"
+    "12) Display number of items (rows) for each category."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
