--- a/pandas/Exercise 4 Pandas.ipynb
+++ b/pandas/Exercise 4 Pandas.ipynb
@@ -11,59 +11,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Import pandas package;\n",
-    "   import pyplot of matplotlib package;\n",
-    "   import seaborn package"
+    "1) Import required Python packages."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Load AMZN.csv into dataframe df"
+    "2) Load AMZN.csv into a Pandas DataFrame."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Plots the Closing Price "
+    "1) Plots the Closing Price."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4) Plot the closing price with x ='Date', y= 'ClosingPrice'"
+    "4) Plot the closing price with x ='Date', y= 'ClosingPrice'."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5) Plot a scatter plot with Closing Price against Volume "
+    "5) Plot a scatter plot with Closing Price against Volume."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6) Load order_details.csv into the dataframe df_order"
+    "6) Load order_details.csv into the dataframe df_order."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7) Display the spread of unit price in histogram"
+    "7) Display the spread of unit price in histogram."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8) Load SalesData.csv into the dataframe df (Hint: encoding='ISO-8859-1')"
+    "8) Load SalesData.csv into the dataframe df (Hint: encoding='ISO-8859-1')."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -73,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -80,11 +141,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "11) Display customer id and customer name for those without shipper name."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -95,11 +170,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13) Retrieve total revenue by customer id"
+    "13) Retrieve total revenue by customer id."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
