--- a/pandas/Exercise 4 Pandas.ipynb
+++ b/pandas/Exercise 4 Pandas.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Import required Python packages."
+    "1) Import Python packages."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Load AMZN.csv into a Pandas DataFrame."
+    "1) Load AMZN.csv into a DataFrame df."
    ]
   },
   {
