--- a/pandas/Exercise 4 Pandas Solution.ipynb
+++ b/pandas/Exercise 4 Pandas Solution.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import Python packages."
+    "1) Import Python packages."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,12 +29,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Load AMZN.csv into a DataFrame df."
+    "2) Load AMZN.csv into a DataFrame df."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "4  24/9/2018   1934.359985  4213700"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7af69e49d0>"
+       "<matplotlib.collections.PathCollection at 0x7f7af69a8640>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "4    10249         51       42.4        40       0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -566,7 +566,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
        "[39 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -2063,7 +2063,7 @@
        "368            3     Company C"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2082,7 +2082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2135,7 +2135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2168,7 +2168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2210,7 @@
        "Name: Revenue, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
