--- a/numpy/NumpyBasics.ipynb
+++ b/numpy/NumpyBasics.ipynb
@@ -297,9 +297,9 @@
     }
    ],
    "source": [
-    "x,y = np.loadtxt('data.txt', skiprows=1, unpack=True) #load dataset from text file,\n",
+    "x,y = np.loadtxt('data.txt', skiprows=1, unpack=True) # load dataset from text file,\n",
     "                                                    # skip the first row,\n",
-    "                                                    # unpack = True retuns the columns as separate arrays\n",
+    "                                                    # unpack = True returns the columns as separate arrays\n",
     "    "
    ]
   },
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array2 = np.genfromtxt('data2.txt', skip_header=1,filling_values =-999) #missing value will be -999\n",
+    "array2 = np.genfromtxt('data2.txt', skip_header=1,filling_values =-999) # missing value will be -999\n",
     "print(array2)\n",
     "\n",
     "# refer to the doc https://numpy.org/devdocs/user/basics.io.genfromtxt.html#filling-values\n"
