--- a/numpy/NumpyBasics.ipynb
+++ b/numpy/NumpyBasics.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Numpy \n",
+    "# NumPy \n",
     "\n",
-    "Numpy (stands for Numerical Python) is a general packages used for processing arrays. It provides a high performance, multidimensional array object and tools to work with these arrays and is popular for scientific computing in Python."
+    "NumPy (stands for Numerical Python) is a general packages used for processing arrays. It provides a high performance, multidimensional array object and tools to work with these arrays and is popular for scientific computing in Python."
    ]
   },
   {
@@ -29,23 +29,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numpy array is a grid of values and values are indexed via a set of zero-based non-negative integers.  \n",
-    "\n",
-    "NumPy arrays can be initiated from nested Python list."
+    "NumPy array is a grid of values and values are indexed via a set of zero-based non-negative integers. NumPy arrays can be initiated from Python lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# [10, 20, 30] is a Python list.\n",
+    "# x is a NumPy array.\n",
     "x = np.array ([10, 20, 30]) # rank is the number of dimensions in the array"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Printing the data-type of NumPy arrays."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -61,8 +68,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The shape of a NumPy array gives the lengths of element-dimensions in the array."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -74,12 +88,46 @@
     }
    ],
    "source": [
-    "print(x.shape)  # size of the numpy array"
+    "print(x.shape)  # size of x is a 1-dimensional numpy array"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, the shape of a NumPy array that has 3 rows, with 2 elements for each row is (3, 2)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(np.array([[1, 2], [3, 4], [5, 6]]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Accessing array elements with indices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -91,21 +139,19 @@
     }
    ],
    "source": [
-    "print(x[0], x[1])  # accessing array elements with indexis"
+    "print(x[0], x[1]) "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "x[0] = 40 # changing array element"
+    "Changing an array element via an index."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +163,9 @@
     }
    ],
    "source": [
-    "print(x) "
+    "x[0] = 40 # changing array element\n",
+    "\n",
+    "print(x)"
    ]
   },
   {
