--- a/numpy/Exercise 2 Numpy.ipynb
+++ b/numpy/Exercise 2 Numpy.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Import numpy package"
+    "1) Import NumPy package"
    ]
   },
   {
